--- a/versions/4.24/Config/DefaultEngine.ini
+++ b/versions/4.24/Config/DefaultEngine.ini
@@ -105,7 +105,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/levels/starter-map.starter-map
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -114,7 +114,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/levels/starter-map.starter-map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
