[register form] almost done

--- a/versions/4.22/Tradicional/Config/DefaultGame.ini
+++ b/versions/4.22/Tradicional/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=33F5FAE24C5DAD158D8F61AE57ACCE3D
+ProjectName=rocket-craft
+CompanyName=Nikola Lukic
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 UsePakFile=False
-
