--- a/versions/4.22/Tradicional/Tradicional.uproject
+++ b/versions/4.22/Tradicional/Tradicional.uproject
@@ -8,6 +8,11 @@
 			"Name": "VaRestPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
+		},
+		{
+			"Name": "VaTexAtlasPlugin",
+			"Enabled": false,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/ebd9356193134578975c8fdfa6878baf"
 		}
 	]
 }
