--- a/versions/4.22/Tradicional/Config/DefaultEngine.ini
+++ b/versions/4.22/Tradicional/Config/DefaultEngine.ini
@@ -110,6 +110,15 @@ bExplicitCanvasChildZOrder=True
 [/Script/HTML5PlatformEditor.HTML5TargetSettings]
 Compressed=True
 
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
+
+[/Script/Engine.NetworkSettings]
+n.VerifyPeer=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -153,10 +162,6 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-AppliedDefaultGraphicsPerformance=Scalable
-
+[/Script/VaRestPlugin.VaRestSettings]
+bExtendedLog=True
 
