[Adding main config]
   Access from any project point - readonly data

--- a/versions/4.22/Tradicional/Config/DefaultEngine.ini
+++ b/versions/4.22/Tradicional/Config/DefaultEngine.ini
@@ -98,7 +98,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/config/main-config.main-config_C
 GameDefaultMap=/Game/maps/starter.starter
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
@@ -118,6 +118,9 @@ AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.NetworkSettings]
 n.VerifyPeer=False
+
+[/Script/VaRestPlugin.VaRestSettings]
+bExtendedLog=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -161,7 +164,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/VaRestPlugin.VaRestSettings]
-bExtendedLog=True
 
