--- a/versions/4.22/games/Barbarian-rm/Brm/Brm.uproject
+++ b/versions/4.22/games/Barbarian-rm/Brm/Brm.uproject
@@ -5,20 +5,28 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "SurvivalGame",
+			"Name": "Brm",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine",
-				"UMG"
-			]
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
 		{
+			"Name": "PhysXVehicles",
+			"Enabled": true
+		},
+		{
+			"Name": "RawInput",
+			"Enabled": true
+		},
+		{
 			"Name": "VaRestPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
+		},
+		{
+			"Name": "AdvancedSessions",
+			"Enabled": true
 		}
 	]
 }
