--- a/versions/4.22/games/Brm/Brm/Config/DefaultEngine.ini
+++ b/versions/4.22/games/Brm/Brm/Config/DefaultEngine.ini
@@ -216,6 +216,9 @@ TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
 
+[/Script/Engine.NetworkSettings]
+n.VerifyPeer=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -258,3 +261,5 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+
