--- a/versions/4.22/games/Brm/Brm/Brm.uproject
+++ b/versions/4.22/games/Brm/Brm/Brm.uproject
@@ -16,6 +16,14 @@
 			"Name": "VaRestPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
+		},
+		{
+			"Name": "PixelStreaming",
+			"Enabled": true
+		},
+		{
+			"Name": "OnlineFramework",
+			"Enabled": true
 		}
 	]
 }
