--- a/versions/4.22/games/Brm/Brm/Config/DefaultGame.ini
+++ b/versions/4.22/games/Brm/Brm/Config/DefaultGame.ini
@@ -21,4 +21,6 @@ Description=Barbarian Road Mashines - No roles here
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 StagingDirectory=(Path="../../../../../../Users/Nikola Lukic/Desktop/TEST_BUILDS")
+BuildConfiguration=PPBC_Shipping
+ForDistribution=False
 
