--- a/versions/4.22/games/Brm/Brm/Config/DefaultEngine.ini
+++ b/versions/4.22/games/Brm/Brm/Config/DefaultEngine.ini
@@ -110,7 +110,7 @@ FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/config/main-config.main-config_C
 GameDefaultMap=/Game/VehicleAdvBP/Maps/menuMap.menuMap
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+ServerDefaultMap=/Game/Maps/barbarian-1.barbarian-1
 GlobalDefaultGameMode=/Game/VehicleAdvBP/Blueprints/VehicleAdvGameMode.VehicleAdvGameMode_C
 GlobalDefaultServerGameMode=None
 
