[varest loaded from engine - subsystems] adapted

--- a/versions/4.24.3/BrmModern/Brm.uproject
+++ b/versions/4.24.3/BrmModern/Brm.uproject
@@ -23,9 +23,13 @@
 			"Enabled": true
 		},
 		{
-			"Name": "VaRestPlugin",
+			"Name": "VaRest",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
+		},
+		{
+			"Name": "WebSocketNetworking",
+			"Enabled": true
 		}
 	]
 }
