--- a/versions/4.24.3/BrmModern/Config/DefaultEngine.ini
+++ b/versions/4.24.3/BrmModern/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Brm
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
-MinimumiOSVersion=IOS_10
+MinimumiOSVersion=IOS_11
 
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VehicleAdvBP",NewGameName="/Script/Brm")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VehicleAdvBP",NewGameName="/Script/Brm")
-NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/HTML5Networking.WebSocketNetDriver",DriverClassNameFallback="/Script/HTML5Networking.IpNetDriver")
+NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="/Script/WebSocketNetworking.WebSocketNetDriver",DriverClassNameFallback="/Script/WebSocketNetworking.WebSocketNetDriver")
 
 
 [/Script/HTML5Networking.WebSocketNetDriver]
@@ -281,5 +281,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
