--- a/versions/4.24.3/BrmModern/Config/DefaultGame.ini
+++ b/versions/4.24.3/BrmModern/Config/DefaultGame.ini
@@ -28,7 +28,7 @@ IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=True
+UsePakFile=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -100,5 +100,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/barbarian-1")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
