--- a/versions/4.24.0/Config/DefaultGame.ini
+++ b/versions/4.24.0/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ ProjectName=Advanced Vehicle Template BP
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C53306DE43E4BF1BBC0B159BDC324785
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "498203AB4B9AE21589D6C1B70A7904FE", "Barbarian Road Mashines")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "2B7E94CC4C31C76C625C72AD485EAA1B", "4.22 with last opengles 2.0 This is tradicional point.")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "2B7E94CC4C31C76C625C72AD485EAA1B", "This is tradicional point.")
 CopyrightNotice="https://maximumroulette.com"
 LicensingTerms="https://maximumroulette.com"
 PrivacyPolicy="https://maximumroulette.com"
@@ -16,7 +16,7 @@ Homepage="https://maximumroulette.com"
 SupportContact=zlatnaspirala@gmail.com
 CompanyDistinguishedName=Nikola Lukic
 ProjectName=Barbarian Road Mashines
-Description=Barbarian Road Mashines - No roles here
+Description=Barbarian Road Mashines - No roles on this roads. Just play the game .
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
@@ -100,4 +100,3 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/barbarian-1")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
