--- a/versions/4.24.0/Config/DefaultGame.ini
+++ b/versions/4.24.0/Config/DefaultGame.ini
@@ -22,7 +22,7 @@ Description=Barbarian Road Mashines - No roles on this roads. Just play the game
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
