Empty project Template added

--- a/versions/Template/FullSpectrum/Config/DefaultEngine.ini
+++ b/versions/Template/FullSpectrum/Config/DefaultEngine.ini
@@ -105,7 +105,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/Maps/Application.Application
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -113,8 +113,8 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameInstanceClass=/Game/Config-Rocket-Craft/main-config.main-config_C
+GameDefaultMap=/Game/Maps/Application.Application
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
@@ -127,5 +127,3 @@ TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
-
-
