--- a/versions/Template/FullSpectrum/Config/DefaultGame.ini
+++ b/versions/Template/FullSpectrum/Config/DefaultGame.ini
@@ -2,3 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=3C6678C6473ACD2A6E5B02A72EF46405
+Description=Crafting template
+ProjectName=Crafting template
+CompanyName=Nikola Lukic
+CompanyDistinguishedName=Nikola Lukic
+
