--- a/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
+++ b/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
@@ -71,6 +71,10 @@
 		{
 			"Name": "Gauntlet",
 			"Enabled": true
+		},
+		{
+			"Name": "WebSocketNetworking",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
