--- a/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
+++ b/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
@@ -1,23 +1,24 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-CompanyName=Epic Games
+CompanyName=Nikola Lukic
 CopyrightNotice=Copyright 1998-2019 Epic Games, Inc. All Rights Reserved.
 Description=Survival Sample game in C++.
-Homepage="https://tomlooman.com"
+Homepage="original project code from https://tomlooman.com"
 ProjectID=00000000000000000000000000000000
 ProjectName=Survival Game
 ProjectDisplayedTitle=Survival Game
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
-StagingDirectory=(Path="")
+BuildConfiguration=PPBC_Shipping
+BuildTarget=Killer
+StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SURVIVAL-PACKS/html")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=True
+UsePakFile=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -35,19 +36,24 @@ bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
--CulturesToStage=en
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
-bEncryptIniFiles=False
-bEncryptPakIndex=False
-GenerateEarlyDownloaderPakFile=False
 bSkipEditorContent=False
 bSkipMovies=False
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/MainMenu_Entry")
-+MapsToCook=(FilePath="/Game/Maps/CoopLandscape_Map")
-bNativizeBlueprintAssets=False
-bNativizeOnlySelectedBlueprints=False
-
++MapsToCook=(FilePath="/Game/Maps/ContainerCity_Art")
 
