--- a/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultEngine.ini
@@ -1,10 +1,4 @@
 [URL]
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Desktop
-AppliedTargetedHardwareClass=Desktop
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
-
 [/Script/Engine.Engine]
 ; Our custom LocalPlayer class
 LocalPlayerClassName=/Script/SurvivalGame.SLocalPlayer
@@ -19,39 +13,6 @@ GrabHandClosedCursor=None
 SlashedCircleCursor=None
 UIScaleRule=ShortestSide
 UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000))),ExternalCurve=None)
-
-[/Script/Engine.RendererSettings]
-r.MobileHDR=True
-r.AllowOcclusionQueries=True
-r.MinScreenRadiusForLights=0.030000
-r.MinScreenRadiusForDepthPrepass=0.030000
-r.PrecomputedVisibilityWarning=False
-r.TextureStreaming=True
-Compat.UseDXT5NormalMaps=False
-r.AllowStaticLighting=True
-r.NormalMapsForStaticLighting=False
-r.GBuffer=True
-r.GenerateMeshDistanceFields=False
-r.Shadow.DistanceFieldPenumbraSize=0.050000
-r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=True
-r.TranslucentSortPolicy=0
-TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
-r.CustomDepth=1
-r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
-r.DefaultFeature.AutoExposure=True
-r.DefaultFeature.MotionBlur=False
-r.DefaultFeature.LensFlare=False
-r.DefaultFeature.AntiAliasing=1
-r.EarlyZPass=3
-r.EarlyZPassMovable=False
-r.DBuffer=False
-r.ClearSceneMethod=1
-r.WireframeCullThreshold=5.000000
-UIScaleRule=ShortestSide
-UIScaleCurve=(EditorCurveData=(Keys=),ExternalCurve=None)
 
 [/Script/NavigationSystem.RecastNavMesh]
 bDistinctlyDrawTilesBeingBuilt=True
@@ -97,19 +58,6 @@ bRebuildAtRuntime=True
 ; customized game channel
 ; if you do this, make sure you define in native for convenience
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1, Name=Weapon, bTraceType=true)
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/CoopLandscape_Map
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/SurvivalGame.SGameInstance
-GameDefaultMap=/Game/Maps/CoopLandscape_Map.CoopLandscape_Map
-ServerDefaultMap=/Game/Maps/CoopLandscape_Map.CoopLandscape_Map
-GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
-GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 bSupportsPortraitOrientation=False
@@ -166,5 +114,134 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType4,Name="ZombieLimb")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bBuildForES2=True
+
+[/Script/Engine.RendererSettings]
+r.MobileHDR=False
+r.Mobile.DisableVertexFog=True
+r.Shadow.CSM.MaxMobileCascades=2
+r.MobileMSAA=1
+r.Mobile.UseLegacyShadingModel=False
+r.Mobile.UseHWsRGBEncoding=False
+r.Mobile.AllowDitheredLODTransition=False
+r.Mobile.AllowSoftwareOcclusion=False
+r.DiscardUnusedQuality=False
+r.AllowOcclusionQueries=True
+r.MinScreenRadiusForLights=0.030000
+r.MinScreenRadiusForDepthPrepass=0.030000
+r.MinScreenRadiusForCSMDepth=0.010000
+r.PrecomputedVisibilityWarning=False
+r.TextureStreaming=True
+Compat.UseDXT5NormalMaps=False
+r.VirtualTextures=False
+r.VirtualTexturedLightmaps=False
+r.VT.TileSize=128
+r.VT.TileBorderSize=4
+r.vt.FeedbackFactor=16
+r.VT.EnableCompressZlib=True
+r.VT.EnableCompressCrunch=False
+r.ClearCoatNormal=False
+r.ReflectionCaptureResolution=128
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
+r.ForwardShading=False
+r.VertexFoggingForOpaque=True
+r.AllowStaticLighting=True
+r.NormalMapsForStaticLighting=False
+r.GenerateMeshDistanceFields=False
+r.DistanceFieldBuild.EightBit=False
+r.GenerateLandscapeGIData=False
+r.DistanceFieldBuild.Compress=False
+r.TessellationAdaptivePixelsPerTriangle=48.000000
+r.SeparateTranslucency=False
+r.TranslucentSortPolicy=0
+TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
+r.CustomDepth=1
+r.CustomDepthTemporalAAJitter=True
+r.PostProcessing.PropagateAlpha=0
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.UsePreExposure=True
+r.EyeAdaptation.EditorOnly=True
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.LensFlare=False
+r.TemporalAA.Upsampling=False
+r.SSGI.Enable=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.LightUnits=1
+r.DefaultBackBufferPixelFormat=4
+r.Shadow.UnbuiltPreviewInGame=True
+r.StencilForLODDither=False
+r.EarlyZPass=3
+r.EarlyZPassOnlyMaterialMasking=False
+r.DBuffer=False
+r.ClearSceneMethod=1
+r.BasePassOutputsVelocity=False
+r.SelectiveBasePassOutputs=False
+bDefaultParticleCutouts=False
+fx.GPUSimulationTextureSizeX=1024
+fx.GPUSimulationTextureSizeY=1024
+r.AllowGlobalClipPlane=False
+r.GBufferFormat=1
+r.MorphTarget.Mode=True
+r.GPUCrashDebugging=False
+vr.InstancedStereo=False
+vr.MultiView=False
+vr.MobileMultiView=False
+vr.MobileMultiView.Direct=False
+vr.RoundRobinOcclusion=False
+vr.ODSCapture=False
+r.WireframeCullThreshold=5.000000
+r.RayTracing=False
+r.RayTracing.UseTextureLod=False
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportPointLightWholeSceneShadows=True
+r.SupportAtmosphericFog=True
+r.SupportSkyAtmosphere=True
+r.SupportSkyAtmosphereAffectsHeightFog=False
+r.SkinCache.CompileShaders=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=True
+r.Mobile.EnableMovableLightCSMShaderCulling=True
+r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowMovableDirectionalLights=True
+r.MobileNumDynamicPointLights=4
+r.MobileDynamicPointLightsUseStaticBranch=True
+r.Mobile.EnableMovableSpotlights=False
+r.SkinCache.SceneMemoryLimitInMB=128.000000
+r.GPUSkin.Limit2BoneInfluences=False
+r.SupportDepthOnlyIndexBuffers=True
+r.SupportReversedIndexBuffers=True
+r.SupportMaterialLayers=False
+r.LightPropagationVolume=False
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/ContainerCity_Art.ContainerCity_Art
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/SurvivalGame.SGameInstance
+GameDefaultMap=/Game/Maps/MainMenu_Entry.MainMenu_Entry
+ServerDefaultMap=/Game/Maps/ContainerCity_Art.ContainerCity_Art
+GlobalDefaultGameMode=/Game/Base/SurvivalCoopGameModeSetup.SurvivalCoopGameModeSetup_C
+GlobalDefaultServerGameMode=None
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 
