--- a/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
+++ b/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
@@ -75,6 +75,10 @@
 		{
 			"Name": "WebSocketNetworking",
 			"Enabled": true
+		},
+		{
+			"Name": "Text3D",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
