--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ MaxBots=1
 PlatformPlayerControllerClass=Class'/Script/ShooterGame.ShooterPlayerController'
 
 [/Script/EngineSettings.GeneralProjectSettings]
-Description=A example for a first person arena shooter game
+Description=Hang Area based on Ue4 Template ShooterGame .
 ProjectID=AD330A544966058723C4B4B20239C774
 ProjectName=Shooter Game
 
@@ -19,10 +19,6 @@ MainMenuMap=/Game/Maps/ShooterEntry
 
 [/Script/Engine.GameSession]
 bRequiresPushToTalk=true
-
-[/Script/UnrealEd.ProjectPackagingSettings]
-bEncryptIniFiles=True
-bEncryptPakIndex=True
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 +StartupMovies=LoadingScreen
@@ -45,5 +41,55 @@ PerformanceMonitorInterval=1.0
 PerformanceMonitorMap=
 PerformanceMonitorTimeout=60
 PerformanceMonitorExitOnFinish=true
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+BuildTarget=ShooterServer
+StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SHOOTER/dedicated/win")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
+bSkipMovies=False
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
++MapsToCook=(FilePath="/Game/Maps/Sanctuary")
 
 
