[try fix blinking zombie action overlaping]
  - Must be tested

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -11,7 +11,16 @@ PlatformPlayerControllerClass=Class'/Script/ShooterGame.ShooterPlayerController'
 [/Script/EngineSettings.GeneralProjectSettings]
 Description=Hang Area based on Ue4 Template ShooterGame .
 ProjectID=AD330A544966058723C4B4B20239C774
-ProjectName=Shooter Game
+ProjectName=Shooter Game Hang Area
+CompanyName=Nikola Lukic Private
+CompanyDistinguishedName=Nikola Lukic zlatnaspirala
+Homepage="https://maximumroulette.com"
+SupportContact=zlatnaspirala@gmail.com
+LicensingTerms="https://maximumroulette.com"
+PrivacyPolicy="https://maximumroulette.com"
+CopyrightNotice=Made in unreal engine 4.24.3 by zlatnaspirala
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1935B9F4536B6C566B7C7BA9D090638", "Hang Area")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "65D616A74E7235971428668D1308B5B7", "Hang Area Debug")
 
 [/Script/ShooterGame.ShooterGameInstance]
 WelcomeScreenMap=/Game/Maps/ShooterEntry
@@ -47,7 +56,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=ShooterServer
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SHOOTER/dedicated/win")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -91,5 +100,3 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
 +MapsToCook=(FilePath="/Game/Maps/Sanctuary")
-
-
