--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -56,7 +56,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=ShooterServer
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SHOOTER/dedicated/win")
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -100,3 +100,4 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
 +MapsToCook=(FilePath="/Game/Maps/Sanctuary")
+
