Add html5 websocket driver for linux

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -220,7 +220,7 @@ BehaviorTreeEditorEnabled=true
 +SupportedAgents=(AgentRadius=35.0,AgentHeight=144.0,Name="Common")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Sanctuary.Sanctuary
+EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
 TransitionMap=
 GameDefaultMap=/Game/Maps/ShooterEntry
 ServerDefaultMap=/Game/Maps/Sanctuary
