[Adding netDriver web socket for macos]

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -10,8 +10,8 @@ PlatformPlayerControllerClass=Class'/Script/ShooterGame.ShooterPlayerController'
 
 [/Script/EngineSettings.GeneralProjectSettings]
 Description=Hang Area based on Ue4 Template ShooterGame .
-ProjectID=AD330A544966058723C4B4B20239C774
-ProjectName=Shooter Game Hang Area
+ProjectID=DE1774EB4546905C17E6BD994B8B589C
+ProjectName=Hang3d Nightmare
 CompanyName=Nikola Lukic Private
 CompanyDistinguishedName=Nikola Lukic zlatnaspirala
 Homepage="https://maximumroulette.com"
@@ -19,8 +19,8 @@ SupportContact=zlatnaspirala@gmail.com
 LicensingTerms="https://maximumroulette.com"
 PrivacyPolicy="https://maximumroulette.com"
 CopyrightNotice=Made in unreal engine 4.24.3 by zlatnaspirala
-ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1935B9F4536B6C566B7C7BA9D090638", "Hang Area")
-ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "65D616A74E7235971428668D1308B5B7", "Hang Area Debug")
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1935B9F4536B6C566B7C7BA9D090638", "Hang3d Nightmare")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "65D616A74E7235971428668D1308B5B7", "Hang3d Nightmare Debug")
 
 [/Script/ShooterGame.ShooterGameInstance]
 WelcomeScreenMap=/Game/Maps/ShooterEntry
@@ -54,9 +54,9 @@ PerformanceMonitorExitOnFinish=true
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=ShooterServer
+BuildTarget=hang3d-nightmare
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SHOOTER/dedicated/win")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
