[android] test build

--- a/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
+++ b/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
@@ -87,7 +87,9 @@
 		"WindowsNoEditor",
 		"XboxOne",
 		"Switch",
-		"Quail"
+		"Quail",
+		"HTML5",
+		"Android"
 	],
 	"EpicSampleNameHash": "3868556100"
 }
