--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -219,16 +219,6 @@ BehaviorTreeEditorEnabled=true
 [/Script/NavigationSystem.NavigationSystemV1]
 +SupportedAgents=(AgentRadius=35.0,AgentHeight=144.0,Name="Common")
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
-TransitionMap=
-GameDefaultMap=/Game/Maps/ShooterEntry
-ServerDefaultMap=/Game/Maps/Sanctuary
-GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
-GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
-+GameModeClassAliases=(Name="FFA",GameMode="/Script/ShooterGame.ShooterGame_FreeForAll")
-+GameModeClassAliases=(Name="TDM",GameMode="/Script/ShooterGame.ShooterGame_TeamDeathMatch")
-
 [/Script/OnlineSubsystemUtils.IpNetDriver]
 InitialConnectTimeout=120.0
 
@@ -289,8 +279,135 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 UIScaleRule=ShortestSide
 
 
-[/Script/Engine.RendererSettings]
-r.TonemapperFilm=0
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
+
+[/Script/Engine.RendererSettings]
+r.MobileHDR=False
+r.Mobile.DisableVertexFog=True
+r.Shadow.CSM.MaxMobileCascades=2
+r.MobileMSAA=1
+r.Mobile.UseLegacyShadingModel=False
+r.Mobile.UseHWsRGBEncoding=False
+r.Mobile.AllowDitheredLODTransition=False
+r.Mobile.AllowSoftwareOcclusion=False
+r.DiscardUnusedQuality=False
+r.AllowOcclusionQueries=True
+r.MinScreenRadiusForLights=0.030000
+r.MinScreenRadiusForDepthPrepass=0.030000
+r.MinScreenRadiusForCSMDepth=0.010000
+r.PrecomputedVisibilityWarning=False
+r.TextureStreaming=True
+Compat.UseDXT5NormalMaps=False
+r.VirtualTextures=False
+r.VirtualTexturedLightmaps=False
+r.VT.TileSize=128
+r.VT.TileBorderSize=4
+r.vt.FeedbackFactor=16
+r.VT.EnableCompressZlib=True
+r.VT.EnableCompressCrunch=False
+r.ClearCoatNormal=False
+r.ReflectionCaptureResolution=128
+r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
+r.ForwardShading=False
+r.VertexFoggingForOpaque=True
+r.AllowStaticLighting=True
+r.NormalMapsForStaticLighting=False
+r.GenerateMeshDistanceFields=False
+r.DistanceFieldBuild.EightBit=False
+r.GenerateLandscapeGIData=False
+r.DistanceFieldBuild.Compress=False
+r.TessellationAdaptivePixelsPerTriangle=48.000000
+r.SeparateTranslucency=False
+r.TranslucentSortPolicy=0
+TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
+r.CustomDepth=1
+r.CustomDepthTemporalAAJitter=True
+r.PostProcessing.PropagateAlpha=0
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.UsePreExposure=True
+r.EyeAdaptation.EditorOnly=True
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.LensFlare=False
+r.TemporalAA.Upsampling=False
+r.SSGI.Enable=False
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.LightUnits=1
+r.DefaultBackBufferPixelFormat=4
+r.Shadow.UnbuiltPreviewInGame=True
+r.StencilForLODDither=False
+r.EarlyZPass=3
+r.EarlyZPassOnlyMaterialMasking=False
+r.DBuffer=True
+r.ClearSceneMethod=1
+r.BasePassOutputsVelocity=False
+r.SelectiveBasePassOutputs=False
+bDefaultParticleCutouts=False
+fx.GPUSimulationTextureSizeX=1024
+fx.GPUSimulationTextureSizeY=1024
+r.AllowGlobalClipPlane=False
+r.GBufferFormat=1
+r.MorphTarget.Mode=True
+r.GPUCrashDebugging=False
+vr.InstancedStereo=False
+vr.MultiView=False
+vr.MobileMultiView=False
+vr.MobileMultiView.Direct=False
+vr.RoundRobinOcclusion=False
+vr.ODSCapture=False
+r.WireframeCullThreshold=5.000000
+r.RayTracing=False
+r.RayTracing.UseTextureLod=False
+r.SupportStationarySkylight=True
+r.SupportLowQualityLightmaps=True
+r.SupportPointLightWholeSceneShadows=True
+r.SupportAtmosphericFog=True
+r.SupportSkyAtmosphere=True
+r.SupportSkyAtmosphereAffectsHeightFog=False
+r.SkinCache.CompileShaders=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=True
+r.Mobile.EnableMovableLightCSMShaderCulling=True
+r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowMovableDirectionalLights=True
+r.MobileNumDynamicPointLights=4
+r.MobileDynamicPointLightsUseStaticBranch=True
+r.Mobile.EnableMovableSpotlights=False
+r.SkinCache.SceneMemoryLimitInMB=128.000000
+r.GPUSkin.Limit2BoneInfluences=False
+r.SupportDepthOnlyIndexBuffers=True
+r.SupportReversedIndexBuffers=True
+r.SupportMaterialLayers=False
+r.LightPropagationVolume=False
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
+GameDefaultMap=/Game/Maps/ShooterEntry.ShooterEntry
+ServerDefaultMap=/Game/Maps/Sanctuary.Sanctuary
+GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
+GlobalDefaultServerGameMode=None
++GameModeClassAliases=(Name="FFA",GameMode=/Script/ShooterGame.ShooterGame_FreeForAll)
++GameModeClassAliases=(Name="TDM",GameMode=/Script/ShooterGame.ShooterGame_TeamDeathMatch)
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
+
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
+
+
