Android - after launch in fly checked

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -410,4 +410,11 @@ AppliedTargetedHardwareClass=Mobile
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.zlatnaspirala.hang3dnightmare
+bBuildForES2=True
+bBuildForES31=False
 
