[google play - preparing]

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -417,4 +417,10 @@ bCookOnTheFlyForLaunchOn=True
 PackageName=com.zlatnaspirala.hang3dnightmare
 bBuildForES2=True
 bBuildForES31=False
+bEnableGooglePlaySupport=True
+bBuildForX8664=True
+KeyStore=hang3d-nightmare-keystore
+KeyAlias=NIGHTMARE
+KeyStorePassword=NIKOLALUKIC
+TargetSDKVersion=30
 
