[ZOMBI GAME WIP]

--- a/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
+++ b/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
@@ -10,15 +10,15 @@ ProjectDisplayedTitle=Survival Game
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
-BuildTarget=Killer
+BuildTarget=html5
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SURVIVAL-PACKS/html")
-FullRebuild=False
-ForDistribution=False
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=False
+UsePakFile=True
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
