Zombie update +Adding html5 setups for realistic rendering template
 + Log for success html5 build of zombie game [survival]

--- a/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
+++ b/versions/4.24-Survival/EpicSurvivalGameSeries-4.24/SurvivalGame/Config/DefaultGame.ini
@@ -17,7 +17,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=html5
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SURVIVAL-PACKS/html")
-FullRebuild=True
+FullRebuild=False
 ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -61,3 +61,4 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/MainMenu_Entry")
 +MapsToCook=(FilePath="/Game/Maps/ContainerCity_Art")
+
