--- a/versions/Realistic/RealisticRendering/Config/DefaultGame.ini
+++ b/versions/Realistic/RealisticRendering/Config/DefaultGame.ini
@@ -1,5 +1,63 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=3787CE0F429D7CF8EFF3BA81693B5E8F
-ProjectName=Realistic Rendering Demolet
+ProjectID=9CC939144BFD3E82F9B2A0BA9524511B
+ProjectName=Realistic Rendering - RocketCraft
+Description=Full power of rocket.
+CompanyName=Nikola Lukic
+CompanyDistinguishedName=Nikola Lukic
+Homepage="https://maximumroulette.com"
+SupportContact=zlatnaspirala@gmail.com
+CopyrightNotice=This is initial demo realistic rendering ue4 template.
+LicensingTerms=Based on ue4.
+PrivacyPolicy="https://maximumroulette.com"
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B7531DCF47126A6D327FBBABB0CA7382", "Full power of ue4 html5 exstension")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "8906B046446F0B5C540CACAA62E8E8FA", "Full power of ue4 html5 exstension DEBUG")
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Shipping
+BuildTarget=
+StagingDirectory=(Path="")
+FullRebuild=False
+ForDistribution=True
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bSkipEditorContent=False
+bSkipMovies=False
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/Maps/Room")
 
