--- a/versions/Realistic/RealisticRendering/RealisticRendering.uproject
+++ b/versions/Realistic/RealisticRendering/RealisticRendering.uproject
@@ -1,8 +1,14 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.24",
+	"EngineAssociation": "{020AA8B2-4C3E-B8F6-C990-16A79867B1CC}",
 	"Category": "Samples",
 	"Description": "",
+	"Plugins": [
+		{
+			"Name": "WebSocketNetworking",
+			"Enabled": true
+		}
+	],
 	"TargetPlatforms": [
 		"MacNoEditor",
 		"WindowsNoEditor"
