Hang component improved

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -423,4 +423,8 @@ KeyStore=hang3d-nightmare-keystore
 KeyAlias=NIGHTMARE
 KeyStorePassword=NIKOLALUKIC
 TargetSDKVersion=30
+bBuildForArm64=True
+bRemoveOSIG=True
+GamesAppID=484886474810
+bSupportAdMob=False
 
