--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -18,7 +18,7 @@ Homepage="https://maximumroulette.com"
 SupportContact=zlatnaspirala@gmail.com
 LicensingTerms="https://maximumroulette.com"
 PrivacyPolicy="https://maximumroulette.com"
-CopyrightNotice=Made in unreal engine 4.24.3 by zlatnaspirala
+CopyrightNotice=
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1935B9F4536B6C566B7C7BA9D090638", "Hang3d Nightmare")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "65D616A74E7235971428668D1308B5B7", "Hang3d Nightmare Debug")
 
@@ -56,7 +56,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=hang3d-nightmare
 StagingDirectory=(Path="C:/Users/Nikola Lukic/Desktop/TEST_BUILDS/SHOOTER/dedicated/win")
-FullRebuild=True
+FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -100,4 +100,3 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
 +MapsToCook=(FilePath="/Game/Maps/Sanctuary")
-
