--- a/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
+++ b/versions/4.24-Shooter/ShooterGame/ShooterGame.uproject
@@ -81,6 +81,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "FieldSystemPlugin",
+			"Enabled": true
+		},
+		{
 			"Name": "ApexDestruction",
 			"Enabled": true
 		}
