--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -416,7 +416,7 @@ bCookOnTheFlyForLaunchOn=True
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.zlatnaspirala.hang3dnightmare
 bBuildForES2=True
-bBuildForES31=False
+bBuildForES31=True
 bEnableGooglePlaySupport=True
 bBuildForX8664=True
 KeyStore=hang3d-nightmare-keystore
