--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -282,8 +282,46 @@ UIScaleRule=ShortestSide
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=False
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
+GameDefaultMap=/Game/Maps/ShooterEntry.ShooterEntry
+ServerDefaultMap=/Game/Maps/Sanctuary.Sanctuary
+GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
+GlobalDefaultServerGameMode=None
++GameModeClassAliases=(Name="FFA",GameMode=/Script/ShooterGame.ShooterGame_FreeForAll)
++GameModeClassAliases=(Name="TDM",GameMode=/Script/ShooterGame.ShooterGame_TeamDeathMatch)
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=True
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.zlatnaspirala.hang3dnightmare
+bBuildForES2=True
+bBuildForES31=True
+bEnableGooglePlaySupport=True
+bBuildForX8664=True
+KeyStore=hang3d-nightmare-keystore
+KeyAlias=NIGHTMARE
+KeyStorePassword=NIKOLALUKIC
+TargetSDKVersion=30
+bBuildForArm64=True
+bRemoveOSIG=True
+GamesAppID=484886474810
+bSupportAdMob=False
+
 [/Script/Engine.RendererSettings]
-r.MobileHDR=False
+r.MobileHDR=True
 r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -324,7 +362,7 @@ TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=False
+r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
@@ -384,47 +422,10 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
-GameDefaultMap=/Game/Maps/ShooterEntry.ShooterEntry
-ServerDefaultMap=/Game/Maps/Sanctuary.Sanctuary
-GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
-GlobalDefaultServerGameMode=None
-+GameModeClassAliases=(Name="FFA",GameMode=/Script/ShooterGame.ShooterGame_FreeForAll)
-+GameModeClassAliases=(Name="TDM",GameMode=/Script/ShooterGame.ShooterGame_TeamDeathMatch)
-
-[/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=True
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
 AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
-AppliedDefaultGraphicsPerformance=Scalable
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
-[/Script/UnrealEd.CookerSettings]
-bCookOnTheFlyForLaunchOn=True
-
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.zlatnaspirala.hang3dnightmare
-bBuildForES2=True
-bBuildForES31=True
-bEnableGooglePlaySupport=True
-bBuildForX8664=True
-KeyStore=hang3d-nightmare-keystore
-KeyAlias=NIGHTMARE
-KeyStorePassword=NIKOLALUKIC
-TargetSDKVersion=30
-bBuildForArm64=True
-bRemoveOSIG=True
-GamesAppID=484886474810
-bSupportAdMob=False
 
