--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ MaxBots=1
 PlatformPlayerControllerClass=Class'/Script/ShooterGame.ShooterPlayerController'
 
 [/Script/EngineSettings.GeneralProjectSettings]
-Description=Hang Area based on Ue4 Template ShooterGame .
+Description="Hang Nightmare Area based on Ue4 Template ShooterGame. "
 ProjectID=DE1774EB4546905C17E6BD994B8B589C
 ProjectName=Hang3d Nightmare
 CompanyName=Nikola Lukic Private
@@ -18,7 +18,7 @@ Homepage="https://maximumroulette.com"
 SupportContact=zlatnaspirala@gmail.com
 LicensingTerms="https://maximumroulette.com"
 PrivacyPolicy="https://maximumroulette.com"
-CopyrightNotice=
+CopyrightNotice="Based on Ue4 Template ShooterGame. "
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "C1935B9F4536B6C566B7C7BA9D090638", "Hang3d Nightmare")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "65D616A74E7235971428668D1308B5B7", "Hang3d Nightmare Debug")
 
@@ -100,4 +100,3 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
 +MapsToCook=(FilePath="/Game/Maps/Sanctuary")
-
