wip BRM zombie not fixed yet

--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -282,26 +282,6 @@ UIScaleRule=ShortestSide
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=False
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
-GameDefaultMap=/Game/Maps/ShooterEntry.ShooterEntry
-ServerDefaultMap=/Game/Maps/Sanctuary.Sanctuary
-GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
-GlobalDefaultServerGameMode=None
-+GameModeClassAliases=(Name="FFA",GameMode=/Script/ShooterGame.ShooterGame_FreeForAll)
-+GameModeClassAliases=(Name="TDM",GameMode=/Script/ShooterGame.ShooterGame_TeamDeathMatch)
-
-[/Script/Slate.SlateSettings]
-bExplicitCanvasChildZOrder=True
-
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=True
 
@@ -356,14 +336,14 @@ r.DistanceFieldBuild.EightBit=False
 r.GenerateLandscapeGIData=False
 r.DistanceFieldBuild.Compress=False
 r.TessellationAdaptivePixelsPerTriangle=48.000000
-r.SeparateTranslucency=False
+r.SeparateTranslucency=True
 r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
@@ -422,10 +402,30 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/ShooterEntry.ShooterEntry
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/ShooterGame.ShooterGameInstance
+GameDefaultMap=/Game/Maps/ShooterEntry.ShooterEntry
+ServerDefaultMap=/Game/Maps/Sanctuary.Sanctuary
+GlobalDefaultGameMode=/Script/ShooterGame.ShooterGame_FreeForAll
+GlobalDefaultServerGameMode=None
++GameModeClassAliases=(Name="FFA",GameMode=/Script/ShooterGame.ShooterGame_FreeForAll)
++GameModeClassAliases=(Name="TDM",GameMode=/Script/ShooterGame.ShooterGame_TeamDeathMatch)
+
+[/Script/Slate.SlateSettings]
+bExplicitCanvasChildZOrder=False
+
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Scalable
+AppliedDefaultGraphicsPerformance=Scalable
 
 
