--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEditor.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEditor.ini
@@ -16,4 +16,6 @@ bReplaceBlueprintWithClass=true
 bDontLoadBlueprintOutsideEditor=true
 bBlueprintIsNotBlueprintType=true
 
+[/Script/UnrealEd.TextureImportSettings]
+AutoVTSize=615
 
