--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultEngine.ini
@@ -284,6 +284,9 @@ MinimumiOSVersion=IOS_11
 
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=True
+DefaultASTCQualityBySize=2
+DefaultASTCQualityBySpeed=0
+DefaultPVRTCQuality=0
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.zlatnaspirala.hang3dnightmare
@@ -299,6 +302,7 @@ bBuildForArm64=True
 bRemoveOSIG=True
 GamesAppID=484886474810
 bSupportAdMob=False
+CompressionOverrides=(bOverrideCompressionTimes=True,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
@@ -366,8 +370,8 @@ r.ClearSceneMethod=1
 r.BasePassOutputsVelocity=False
 r.SelectiveBasePassOutputs=False
 bDefaultParticleCutouts=False
-fx.GPUSimulationTextureSizeX=1024
-fx.GPUSimulationTextureSizeY=1024
+fx.GPUSimulationTextureSizeX=512
+fx.GPUSimulationTextureSizeY=512
 r.AllowGlobalClipPlane=False
 r.GBufferFormat=1
 r.MorphTarget.Mode=True
@@ -427,5 +431,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
-
-
