--- a/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
+++ b/versions/4.24-Shooter/ShooterGame/Config/DefaultGame.ini
@@ -83,7 +83,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bSkipEditorContent=False
 bSkipMovies=False
 +IniKeyBlacklist=KeyStorePassword
@@ -100,3 +100,4 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/ShooterEntry")
 +MapsToCook=(FilePath="/Game/Maps/Sanctuary")
+
